Доделали первую часть с Азатом